funcion mostrar minas lista

--- a/BuscaMinas.html
+++ b/BuscaMinas.html
@@ -7,8 +7,11 @@
         <link rel="stylesheet" type="text/css" href="CSS/Estilos.css">
     </head>
     <body onload="generarCuadricula()">
-        <div id="grid-container">
-
-        </div>
+        <form>
+            <h1>Busca Minas</h1>
+            <div id="grid-container" alig="center">
+            </div> 
+        </form>
+        
     </body>
 </html>
